syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "QueryFilter.proto";
import "Vector.proto";
import "Vector3Int.proto";

// CmdId: 2309
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message QueryPathReq {
	OptionType query_type = 9;
	int32 query_id = 4;
	uint32 scene_id = 8;
	Vector source_pos = 14;
	repeated Vector destination_pos = 11;
	QueryFilter filter = 5;
	Vector3Int destination_extend = 7;
	Vector3Int source_extend = 15;

	enum OptionType {
		OPTION_TYPE_NONE = 0;
		OPTION_TYPE_NORMAL = 1;
		OPTION_TYPE_FIRST_CAN_GO = 2;
	}
}
