// Grasscutter - A server software reimplementation for a certain anime game.
// Copyright (C) 2022  Grasscutter Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published
// by the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "Vector.proto";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 2398
// EnetChannelId: 0
// EnetIsReliable: true
message QueryPathRsp {
	int32 query_id = 12;
	repeated Vector corners = 6;
	PathStatusType query_status = 8;
	int32 retcode = 1;

	enum PathStatusType {
		PATH_STATUS_TYPE_FAIL = 0;
		PATH_STATUS_TYPE_SUCC = 1;
		PATH_STATUS_TYPE_PARTIAL = 2;
	}
}
